# main_site

./: .gitignore  Makefile  README.md  docker-compose.yml  dot_env_example  pyproject.toml
project/backend/: Dockerfile  requirements.txt
project/backend/project/main/: admin.py  models.py  resources.py  urls.py  views.py
project/backend/project/main/migrations/: 0001_initial.py
project/backend/project/main/templates/: 404.html  base.html  index.html
project/backend/project/main/templates/admin/main/: base_site.html
project/backend/project/main/templates/admin/main/ContentContent/: change_list.html
project/backend/project/main/templates/main/: category.html  content.html  home.html
project/backend/project/main/templates/main/category/: photo_gallery.html  photo_gallery_lightbox.html
project/backend/project/main/templates/main/content/: cartaz.html  photo.html  photo_gallery.html
project/backend/project/project/: urls.py
project/backend/project/project/settings/: __init__.py  base.py  development.py
project/backend/project/static/main/css/: contact_form.css
project/backend/project/static/main/js/: contact_form.js
project/backend/scripts/: start_project.sh
